build_output.txt
> Task :FtcRobotController:clean
> Task :TeamCode:clean
> Task :FtcRobotController:preBuild UP-TO-DATE
> Task :FtcRobotController:preDebugBuild UP-TO-DATE
> Task :FtcRobotController:generateDebugBuildConfig
> Task :FtcRobotController:generateDebugResValues
> Task :FtcRobotController:generateDebugResources
> Task :FtcRobotController:packageDebugResources
> Task :TeamCode:preBuild UP-TO-DATE
> Task :TeamCode:preDebugBuild UP-TO-DATE
> Task :FtcRobotController:javaPreCompileDebug
> Task :TeamCode:javaPreCompileDebug
> Task :FtcRobotController:parseDebugLocalResources
> Task :FtcRobotController:compileDebugLibraryResources
> Task :FtcRobotController:writeDebugAarMetadata
> Task :TeamCode:generateDebugResValues
> Task :TeamCode:mapDebugSourceSetPaths
> Task :TeamCode:generateDebugResources
> Task :TeamCode:checkDebugAarMetadata
> Task :FtcRobotController:generateDebugRFile
> Task :TeamCode:mergeDebugResources

> Task :FtcRobotController:compileDebugJavaWithJavac
Note: /Users/sriyan/Documents/FTC/TestRepo/FtcRobotController/src/main/java/org/firstinspires/ftc/robotcontroller/internal/FtcRobotControllerActivity.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.

> Task :TeamCode:createDebugCompatibleScreenManifests
> Task :FtcRobotController:extractDeepLinksDebug
> Task :TeamCode:extractDeepLinksDebug
> Task :FtcRobotController:processDebugManifest
> Task :FtcRobotController:bundleLibCompileToJarDebug
> Task :TeamCode:processDebugMainManifest
> Task :TeamCode:processDebugManifest
> Task :TeamCode:processDebugManifestForPackage
> Task :TeamCode:processDebugResources

> Task :TeamCode:compileDebugJavaWithJavac FAILED
/Users/sriyan/Documents/FTC/TestRepo/TeamCode/src/main/java/org/firstinspires/ftc/teamcode/opmodes/teleops/PIDTest.java:91: error: cannot find symbol
                Shooter.INSTANCE.runAtRPM(TEST_RPM).schedule();
                                ^
  symbol:   method runAtRPM(double)
  location: variable INSTANCE of type Shooter
/Users/sriyan/Documents/FTC/TestRepo/TeamCode/src/main/java/org/firstinspires/ftc/teamcode/opmodes/teleops/PIDTest.java:143: error: cannot find symbol
        boolean atTarget = Shooter.INSTANCE.isAtRPM(TEST_RPM);
                                           ^
  symbol:   method isAtRPM(double)
  location: variable INSTANCE of type Shooter
/Users/sriyan/Documents/FTC/TestRepo/TeamCode/src/main/java/org/firstinspires/ftc/teamcode/opmodes/teleops/PIDTest.java:177: error: cannot find symbol
        telemetry.addData("Kp", ShooterConstants.velocityKp);
                                                ^
  symbol:   variable velocityKp
  location: class ShooterConstants
/Users/sriyan/Documents/FTC/TestRepo/TeamCode/src/main/java/org/firstinspires/ftc/teamcode/opmodes/teleops/PIDTest.java:178: error: cannot find symbol
        telemetry.addData("Ki", ShooterConstants.velocityKi);
                                                ^
  symbol:   variable velocityKi
  location: class ShooterConstants
/Users/sriyan/Documents/FTC/TestRepo/TeamCode/src/main/java/org/firstinspires/ftc/teamcode/opmodes/teleops/PIDTest.java:179: error: cannot find symbol
        telemetry.addData("Kd", ShooterConstants.velocityKd);
                                                ^
  symbol:   variable velocityKd
  location: class ShooterConstants
/Users/sriyan/Documents/FTC/TestRepo/TeamCode/src/main/java/org/firstinspires/ftc/teamcode/opmodes/teleops/PIDTest.java:180: error: cannot find symbol
        telemetry.addData("Kf (Feedforward)", ShooterConstants.velocityKf);
                                                              ^
  symbol:   variable velocityKf
  location: class ShooterConstants
/Users/sriyan/Documents/FTC/TestRepo/TeamCode/src/main/java/org/firstinspires/ftc/teamcode/opmodes/teleops/PIDTest.java:194: error: cannot find symbol
            telemetry.addData("Velocity Control Active", Shooter.INSTANCE.velocityControlActive);
                                                                         ^
  symbol:   variable velocityControlActive
  location: variable INSTANCE of type Shooter
/Users/sriyan/Documents/FTC/TestRepo/TeamCode/src/main/java/org/firstinspires/ftc/teamcode/opmodes/teleops/PIDTest.java:198: error: cannot find symbol
            double calcFeedforward = targetTicksPerSec * ShooterConstants.velocityKf;
                                                                         ^
  symbol:   variable velocityKf
  location: class ShooterConstants
8 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':TeamCode:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

BUILD FAILED in 3s
28 actionable tasks: 28 executed
